@@ -1,6 +1,7 @@
 2.0b4 (TBD)
 ------------------
 - add rio_tiler.io.base.BaseReader abstract class for COGReader and STACReader to inherit from
+- STACReader raises `InvalidAssetName` for invalid asset name or `MissingAssets` when no assets is passed (#208)
 
 Breaking Changes:
 - Reader.spatial_info is a property (#203)
